# personal-learning

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  idea.md  package-lock.json  package.json  plan.md
.claude/: launch.json
.github/workflows/: desktop-release.yml
.scratch/: README.md  commit-msg-c2-node-persistence.txt  commit-msg-slice-1-cutover.txt  commit-msg-slice-1-fixes.txt  commit-msg-slice-2.txt  commit-msg-slice-3.txt
.scratch/issues/: README.md
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile_flutter/: README.md  pubspec.yaml
crates/core/: Cargo.toml  README.md
crates/core/src/: atomic_write.rs  domain.rs  draft.rs  lib.rs  llm.rs  metrics.rs  node_persistence.rs  pet.rs  project_vault.rs  rag.rs  review.rs  review_runs.rs  source_versions.rs  vault.rs  worker_bridge.rs  workspace.rs
crates/tauri_commands/: Cargo.toml  README.md
crates/tauri_commands/src/: lib.rs
docs/adr/: 0001-desktop-first-local-architecture.md  0002-cross-platform-desktop-ai-approval-workflow.md  0003-project-container-and-canonical-markdown-notes.md
docs/agents/: domain.md  issue-tracker.md  loop-engineering.md  triage-labels.md
docs/api-contract/: README.md  document-worker.md
docs/architecture/: README.md  notebooklm-style-rag.vi.md
docs/design/: prompt-first-workspace-wireframe.vi.md
docs/product/: pet-openclaw-learning-ecosystem-requirements.md
docs/release/: README.md  macos-production.md  phase-1-handoff.md
docs/schema/: 0001-core-entities.md  README.md  project-vault-v1.md
docs/test-plan/: README.md  phase-1-verification.md
plan/: 00-master-roadmap.md  README.md
plan/slice-01-project-cutover/: 01-feature-canonical-node-persistence.md  (+3 more)
scripts/: setup-worktree.sh  verify.sh
specs/: README.md
workers/document_worker/: README.md  pyproject.toml
workers/document_worker/src/document_worker/: __init__.py  cli.py  hashing.py  models.py  parser.py
workers/document_worker/tests/: test_parser.py
(+40 files in other folders)
