[package]
name = "local_knowledge_core"
version = "0.1.0"
edition = "2021"
description = "Domain core for the local-first learning knowledge app"

[lib]
name = "local_knowledge_core"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }

[dev-dependencies]
tempfile = "3"
