[project]
name = "document-worker"
version = "0.1.0"
description = "Local document parsing worker for the learning knowledge vault"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
document-worker = "document_worker.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
